# protobuf-c-examples

./: .gitignore  CMakeLists.txt  Makefile  README.md  deserialize.c  serialize.c
proto/: CMakeLists.txt  amessage.proto
